Specify minimum height for social box - Avoids jumping while loading

--- a/content/stylesheets/social.less
+++ b/content/stylesheets/social.less
@@ -3,6 +3,7 @@
 	border-bottom: dotted 1px #d3d7fc;
 	padding-bottom: 4px;
 	padding-top: 2px;
+	min-height: 120px;
 }
 
 #social .fb-like {
